# non-linear-normalization

./: .gitignore  .isort.cfg  .pylintrc  README.md  pyproject.toml
.github/workflows/: pr-actions.yaml  pr-actions.yml
asym_tvd/: outliers.py  tvd.py
examples/: asym_linear.ipynb
examples/.ipynb_checkpoints/: asym_linear-checkpoint.ipynb
nlnorm/: diff_matrix.py  lasso.py  outliers.py
nlnorm/asymmetric/: lasso.py  linear_regression.py  ridge.py  weights.py
test/: test_asym_linreg.py  test_data_generate.py
