[tool.poetry]
name = "non-linear-normalization"
version = "0.1.0"
description = ""
authors = ["Arseniy Shchepetnov <a.shchepetnov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.9.2"
mypy = "^0.942"
pylint = "^2.14.0"
autopep8 = "^1.6.0"
types-PyYAML = "^6.0.5"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
